syntax = "proto3";

package user;

option go_package = "./proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc FindUserByEmail(FindUserByEmailRequest) returns (FindUserByEmailResponse);
}

// CreateUser
message CreateUserRequest {
    string email = 1;
    string password = 2;
}

message CreateUserResponse {
    User user = 1;
}

// FindUserByEmail
message FindUserByEmailRequest {
    string email = 1;
}

message FindUserByEmailResponse {
    User user = 1;
}

message User {
    int64 id = 1;
    string email = 2;
}
